Updates: UI text overflow corrected

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -127,6 +127,7 @@ nav{
 
 .text-body{
   width: 80%;
+  max-width: 90%;
   height: 95%;
   display: flex;
   flex-direction: column;
@@ -134,12 +135,14 @@ nav{
 
 .todo-title,
 .todo-text{
-  display: inline;
   margin: 0 0;
   text-align: justify;
   max-height: 90%;
   text-transform: lowercase;
   font-size: 1rem;
+  overflow: hidden;
+  max-width: 100%;
+  text-overflow: ellipsis;
 }
 
 .todo-title::first-letter,
